<resources>
    <string name="app_name">云智教育</string>
    <string name="str_home_first">我的课程</string>
    <string name="str_home_second">校方公告</string>
    <string name="str_home_third">任务中心</string>
    <string name="str_home_fourth">知识对抗</string>
    <string name="str_home_fifth">成绩查询</string>
    <string name="str_home_fifth_teacher">数据分析</string>
    <string name="str_home_sixth">我的笔记</string>
    <string name="str_home_seventh">综合实训</string>
    <string name="str_home_eighth">能力档案</string>

    <string name="hint_login_username">账号/手机号</string>
    <string name="hint_login_password">请输入登录密码</string>
    <string name="login">登录</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="please_input_limit_pwd">请输入数字或字母</string>

    <string name="coursecontent">由浅到深，老师将会带你进入神奇的Android开发世界。该课程需要有面向对象编程基础和熟悉Java语言，不满足该条件的同学，可先报名老师发布的《Java面向对象编程》课程</string>
    <string name="suitstudent">有Java编程基础，有面向对象编程经验，不满足该条件的同学，可先报名老师发布的《Java面向对象编程》课程</string>
    <string name="teacherintro">该讲师曾在阿里巴巴担任资深开发工程师，有8年编程开发经验（使用的编程语言包括python、C、C++、Java、Objeictive-c、Swift等）</string>
</resources>
