<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:YunZhi="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.renly.edu_yunzhi.Fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.youth.banner.Banner
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    YunZhi:indicator_height="7dp"
                    YunZhi:indicator_width="7dp"
                    YunZhi:indicator_margin="2dp"/>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_home_first"
                        style="@style/ll_home_style">
                        <ImageView
                            android:id="@+id/iv_home_first"
                            style="@style/iv_home_style"
                            android:src="@drawable/classes"/>
                        <TextView
                            android:id="@+id/tv_home_first"
                            style="@style/tv_home_style"
                            android:text="@string/str_home_first"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_home_second"
                        style="@style/ll_home_style">
                        <ImageView
                            android:id="@+id/iv_home_second"
                            style="@style/iv_home_style"
                            android:src="@drawable/inform"/>
                        <TextView
                            android:id="@+id/tv_home_second"
                            style="@style/tv_home_style"
                            android:text="@string/str_home_second"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_home_third"
                        style="@style/ll_home_style">
                        <ImageView
                            android:id="@+id/iv_home_third"
                            style="@style/iv_home_style"
                            android:src="@drawable/task"/>
                        <TextView
                            android:id="@+id/tv_home_third"
                            style="@style/tv_home_style"
                            android:text="@string/str_home_third"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_home_fourth"
                        style="@style/ll_home_style">
                        <ImageView
                            android:id="@+id/iv_home_fourth"
                            style="@style/iv_home_style"
                            android:src="@drawable/activity"/>
                        <TextView
                            android:id="@+id/tv_home_fourth"
                            style="@style/tv_home_style"
                            android:text="@string/str_home_fourth"/>
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:id="@+id/ll_home_fifth"
                        style="@style/ll_home_style">
                        <ImageView
                            android:id="@+id/iv_home_fifth"
                            style="@style/iv_home_style"
                            android:src="@drawable/grade"/>
                        <TextView
                            android:id="@+id/tv_home_fifth"
                            style="@style/tv_home_style"
                            android:text="@string/str_home_fifth"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_home_sixth"
                        style="@style/ll_home_style">
                        <ImageView
                            android:id="@+id/iv_home_sixth"
                            style="@style/iv_home_style"
                            android:src="@drawable/wa"/>
                        <TextView
                            android:id="@+id/tv_home_sixth"
                            style="@style/tv_home_style"
                            android:text="@string/str_home_sixth"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_home_seventh"
                        style="@style/ll_home_style">
                        <ImageView
                            android:id="@+id/iv_home_seventh"
                            style="@style/iv_home_style"
                            android:src="@drawable/training"/>
                        <TextView
                            android:id="@+id/tv_home_seventh"
                            style="@style/tv_home_style"
                            android:text="@string/str_home_seventh"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_home_eighth"
                        style="@style/ll_home_style">
                        <ImageView
                            android:id="@+id/iv_home_eighth"
                            style="@style/iv_home_style"
                            android:src="@drawable/dataanalyse"/>
                        <TextView
                            android:id="@+id/tv_home_eighth"
                            style="@style/tv_home_style"
                            android:text="@string/str_home_eighth"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#CCCCCC" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/lv_home_newsList"
                    android:scrollbars="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/NewsListStyle"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
