<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_courseintro_title"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/text_color_pri"
                android:textSize="17sp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:text="Android开发基础教程"/>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="4.6星 | 57人在学"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/divider_line" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="课程介绍"
                    android:textColor="@color/text_color_pri"
                    />

                <TextView
                    android:id="@+id/tv_courseintro_intro"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/coursecontent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/text_color_pri"
                    android:text="适用人群"/>

                <TextView
                    android:id="@+id/tv_courseintro_suitstudent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/suitstudent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/text_color_pri"
                    android:text="讲师"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/my_user_default"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tv_courseintro_teachername"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="云智教育讲师"/>
                        <TextView
                            android:id="@+id/tv_courseintro_teacherintro"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/teacherintro"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/courseintro_recyclerview"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->
</ScrollView>